tests/pass/07_loop_control.lang
функция main() : целое {
    целое и = 0;
    целое сумма = 0;
    пока (и < 10) {
        и = и + 1;
        если (и == 5) { продолжить; }
        если (и == 8) { прервать; }
        сумма = сумма + и;
    }
    утверждение(сумма == 23); // 1+2+3+4 + 6+7 = 23
    вернуть 0;
}
