tests/fail/27_array_reassign_wrong_size.lang
// ОЖИДАЕТСЯ ОШИБКА: несоответствие типов при присваивании
функция Начало() : целое {
    целое[3] а = [1, 2, 3];
    а = [1, 2];
    вернуть 0;
}
